# bizclaw

./: .gitignore  Cargo.toml  README.md
android/: setup_picolm.sh
android/app/: build.gradle.kts
android/app/src/main/cpp/: CMakeLists.txt  picolm_jni.c
android/app/src/main/java/vn/bizclaw/app/: MainActivity.kt
android/app/src/main/java/vn/bizclaw/app/engine/: PicoLMEngine.kt
android/app/src/main/java/vn/bizclaw/app/ui/chat/: ChatScreen.kt  ChatViewModel.kt
android/app/src/main/java/vn/bizclaw/app/ui/localllm/: LocalLLMScreen.kt
crates/bizclaw-gateway/src/: server.rs
crates/bizclaw-gateway/src/dashboard/: app.js  index.html
crates/bizclaw-platform/src/: admin.rs  admin_dashboard.html  db_pg.rs  lib.rs
crates/bizclaw-tools/src/: lib.rs
deploy/viagent-landing/: index.html
landing/: index.html
src/: platform_main.rs
